--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "webpack-merge": "^6.0.1"
   },
   "dependencies": {
+    "gsap": "^3.14.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   }
