--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.2",
+    "dotenv": "^17.2.3",
+    "dotenv-webpack": "^8.1.1",
     "file-loader": "^6.2.0",
     "html-loader": "^5.1.0",
     "html-webpack-partials-plugin": "^0.8.0",
@@ -42,6 +44,7 @@
     "webpack-merge": "^6.0.1"
   },
   "dependencies": {
+    "airtable": "^0.12.2",
     "gsap": "^3.14.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
