--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
   },
   "dependencies": {
     "airtable": "^0.12.2",
+    "framer-motion": "^12.31.1",
     "gsap": "^3.14.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-use-measure": "^2.1.7"
   }
 }
