--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "airtable": "^0.12.2",
     "framer-motion": "^12.31.1",
     "gsap": "^3.14.2",
+    "prismjs": "^1.30.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-use-measure": "^2.1.7"
