--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "start": "webpack serve --open --config webpack.dev.js",
     "watch": "webpack --config webpack.dev.js",
+    "fetch-data": "node scripts/fetch-posters.js",
     "build": "webpack --config webpack.prod.js"
   },
   "devDependencies": {
